--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
         }
 
         debug {
-            buildConfigField("String", "DATABASE_NAME", '"orgs.db"')
+            buildConfigField("String", "DATABASE_NAME", '"orgs_debug.db"')
         }
 
         uiTest {
